顾顾又问问

--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -110,7 +110,6 @@
  ARMY_CHEN_QU_DESC:0 "陈渠珍1903年考入湖南武备学堂第一期附设的兵目班，1904年因成绩优异升入将弁班，1906年毕业分配在长沙新军第四十九标任队官，并加入中国同盟会。1907年经湖北巡抚张学簪介绍，持赵尔巽的介绍信，偕同乡、旧学友林修梅等五人投奔川边大臣赵尔丰，任新军六十五标队官。宣统元年（1909年）英军入侵西藏，七月，钟颖率部进军西藏，陈渠珍被任命为援藏军一标三营（管带林修梅）督队官，参加了工布江达、波密等地战役。川边大臣赵尔丰抵昌都，撤销林的管带职务，委陈渠珍代之，进军驻守工布江达。1911年10月，武昌起义爆发的消息传到西藏后，进藏川军中的哥老会组织积极响应，其部属还杀死了协统罗长裿。第一次驱汉事件后，陈渠珍深知形势危殆，策动手下湘黔滇籍官兵115名，取道羌塘草原，翻越唐古拉山入青海返回内地，辗转七个多月，直至民国元年6月到达西宁，全队仅七人生还。回到湘西，负责督办开河工程，湘西镇守使田应诏保奏其开河有功，北洋政府查办在西藏时协统罗长琦被杀案，被诬告陈是主谋，逮解送京。陈渠珍力辩得直，又得傅良佐担保，方得脱案。1913年任湘西镇守使署中校参谋、副参谋长。主办军官训练团。1917年护法战争时期，湘西镇守使田应诏组织护法军第一路军，陈任参谋长兼第一梯团长，旋又代理第一路军司令。1920年湘西镇守使田应诏中将因拥护程潜被谭延闿架空调往长沙；谭延闿任命陈渠珍为湘西巡防军统领、辰沅剿匪总指挥。自此掌握了湘西军政大权。1925年，四川军阀熊克武部侵入湘西。省长赵恒惕任命陈为澧州镇守史、湘西屯边使。自此陈渠珍彻底稳定了对湘西的控制权，而在大革命期间，其同样两面受用，北伐军时期，陈渠珍加入革命军。汤芗铭时期，陈渠珍又宣布效忠汤芗铭，但无论如何，始终没有人能撼动陈渠珍对湘西的控制。时至今日无人不称其为“湘西王”。\n\n而现在陈渠珍走出了湘西，一统湖南，在他的治下，湖南也许将发生翻天覆地的变化。"
  POLITICS_HNN_HE_JIAN_DESC:0 "何键最初打算从事文职工作，但在辛亥革命爆发后，何键发现在北洋政府的新式陆军中晋升更快，并可以借此获得更高的地位和名望。\n\n何键先是入读湖南将校养成所，后又被提拔到南京的一个学生团，随后就读于湖北陆军第三中学，最后进入保定武备学堂，并于1916年毕业于步兵科。怀着仕途坦荡的希望，何键回到了湖南，但1917年反对汤芗铭督军的暴动让他的希望破灭了。于是在赵恒惕的授意下，何键拉起了一支地方游击队，以对抗北洋入侵者。\n\n何键以自己的部队为谈判筹码，被提拔为唐生智下辖的一个师中的营长，由此开始了与后者长期共事的生涯。他与李品仙的晋升经历相似，二人后来都当过第八军第二师的师长，又都加入了国民革命军和国民党。在北伐战争中，他随第八军北上，但与激进社会主义者贺龙和彭德怀的关系逐渐疏远。\n\n通过一系列暗箱操作，何键最终豪取了省长之位，现在到他大展拳脚的时候了。" 
  POLITICS_HNN_CHEN_SANLI_DESC:0 "陈三立"
- POLITICS_HNN_LU_DIPING_DESC:0 "鲁涤平，字咏庵，一作咏安，号旡烦，湖南宁乡人。鲁涤平行伍出身，22岁考入湖南兵目学堂，其立场亲革命党，辛亥革命时参与后续各省独立起义运动。1915年加入中华革命党，1922年升任湖南陆军第二师师长。1924年3月，鲁涤平被孙中山任命为禁烟督办，1924年8月辞退此职务。1924年10月，湖南讨贼军改组为建国湘军，鲁涤平担任建国湘军第二军军长。1925年建国湘军改组为国民革命军，鲁涤平成为国民革命军第二军副军长。1926年7月国民党北伐中，升任第二军军长代理兼右翼指挥官。而当大革命失败之后，鲁涤平和国民党内其他右派将领一起聚集在湖南长沙讨论彼此的出路，但是他并没有选择和大部分右派将领一样去投靠云南的唐继尧。而是留在了湖南和赵恒惕政权达成了和解，在赵氏政府下他并不被信任没有重新掌军，而是转为了衡阳市警察局局长，但是也只是一个空头职务，他手下的副局长们都直接听命于赵恒惕而不是他这个局长。"
  POLITICS_HNN_HU_HANMING_DESC:0 "胡汉民，原名衍鸿，字展堂，号不匮室主，广东番禺县人氏，原籍江西吉安府庐陵县延福乡青山村，中国国民党元老和早期主要领导人之一，也是国民党右派公认的领袖。在孙中山死后他和汪兆铭被认为是最有可能的继承人，但是随着1925年他卷入廖仲恺遇刺案，他的党内地位急速下滑，左派们群起而攻之，右派也因为这起事件饱受争议。而汪兆铭和刚刚跻身高层的蒋中正甚至想要治胡汉民于死地，虽然最后因为胡汉民的身份斐然而不了了之，但是他仍然逃不了被判有罪，流放出国。他不得不流亡欧洲，在德国、奥匈、俄罗斯之间辗转。尽管他流亡欧洲，可他仍然心系国内，时常写信与国内好友探讨时局。十余年的光阴并没有磨灭掉他对国家对民族的热爱，如今他终于有机会回到国内，他势必要夺回他失去的一切，领导国民党遵奉孙先生遗志，解放全中国！"
  POLITICS_HNN_HE_HAN_ZONG_DESC:0 "贺衷寒"
  HNN_Shi_Dingwu: "石顶武"
@@ -162,13 +161,34 @@
  HNN_mao_ze_dong:0 "毛泽东"
  HNN_dai_jitao:0 "戴季韬"
  HNN_zhou_xicheng:0 "周西成"
- HNN_he_long:0 "贺龙"
- HNN_he_jian:0 "何键"
  HNN_Teng_Daiyuan:0 "滕代远"
  HNN_tang_shengming:0 "唐生明"
  HNN_tao_zhiyue:0 "陶峙岳"
  HNN_Xia_Dou_Ying:0 "夏斗寅"
+
+ HNN_zhao_junmai_for: "赵君迈"
+ HNN_zhao_junmai_for_desc:0 "§Y生于：§!§L1901年；大清帝国、湖南省衡山§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L作为赵恒惕的胞弟，赵君迈先后于日美两国接受教育。他毕业于威斯康辛大学土木工程系，后应兄长之邀为衡阳市政府效力。虽然他目前的地位完全仰仗于兄长手中的权力，但赵君迈仍决心成为一名合格的政府官员，并对兄长尽职尽责。§!"
+ HNN_zhong_boyi_eco: "钟伯毅"
+ HNN_zhong_boyi_eco_desc:0 "§Y生于：§!§L1880年；大清帝国、湖南省蓝山§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L钟伯毅曾是清朝湖南咨议局驻会议员，直到辛亥革命时他支持革命派并当选为国会议员。1917年，他加入了孙中山的广州政府，以反对袁世凯的继承者段祺瑞旧皖系。1921年，他担任湖南省财政厅长，并帮助制订了湖南省宪。他仍在湖南政府任职，是赵恒惕派系中一名公认的有影响力的人物。§!"
+ HNN_zhou_shizhao_sec: "周世钊"
+ HNN_zhou_shizhao_sec_desc:0 "§Y生于：§!§L1897年3月12日；大清帝国、湖南省宁乡县§!\n§Y派系：§!§l共和派§!\n§Y背景：§!§L周世钊出生于长沙的一户贫苦农民家庭，从小便在父亲儒家经典的耳濡目染下成长。周世钊就读于湖南省立第一师范学校，与毛泽东是同窗好友。两人同蔡和森一道于1918年在周家成立了新民学会。1919年，周世钊成为毛泽东创办的《湘江评论》周刊顾问。1921年，周世钊开始了自己的教育事业，在南京国立东南大学工作。尔后，他又回到了湖南，并在湖南省立第一女子师范学校教授语文。\n\n自徐特立介绍他加入国民党以来，周世钊一直都对国民党的事业深感同情，北伐失败后，他选择继续留在湖南。他是第一批被化名李子任的毛泽东发展的线人，在得知自己的挚友还活着的那天他便答应了下来，他此生最大的期望就是推翻直系政府。§!"
+ HNN_Zhang_Huizan_sec: "张辉瓒"
+ HNN_Zhang_Huizan_sec_desc:0 "§Y生于：§!§L1884年；大清帝国、湖南省长沙§!\n§Y派系：§!§g第二军§!\n§Y背景：§!§L张辉瓒曾在湖南武备学堂接受过军事训练，并于日本陆军士官学校第八期步兵科毕业，后于湖南担任参谋职务，由此开启了他的军旅生涯。后又成为北洋陆军军需学校的教官。由于反对袁世凯的称帝野心，张辉瓒潜逃回湖南，拉起一支队伍参加了护国战争反抗袁世凯。战争结束后，张继续在谭延闿手下任职，并帮助其对抗张敬尧的部队。\n\n在谭延闿收复湖南失败后，张辉瓒便追随他去了广州。他在国民革命军第二军继续为谭延闿效力，并参加了北伐战争。北伐战争失败后，赵恒惕赦免了被围困的第二军，张辉瓒也在其中。从那时起，他就过着半退休的生活，但如果谭延闿重新掌握政治，届时他将第一时间追随谭延闿。§!"
+ HNN_lu_dangping: "鲁荡平"
+ HNN_lu_dangping_sec: "鲁荡平"
+ HNN_lu_dangping_sec_desc:0 "§Y生于：§!§L1895年；大清帝国、湖南省宁乡§!\n§Y派系：§!§g第二军§!\n§Y背景：§!§L鲁荡平是鲁涤平胞弟，从1915年起便在湖南省府任职。鲁涤平与谭延闿离开湖南后，鲁荡平也随之离开。鲁荡平在北伐战争中在第二军担任指挥官，国民党垮台时，他与哥哥和谭延闿一起被赦免。鲁荡平此后从事新闻工作，并经常与谭延闿谈论时政。谭延闿则非常敬重鲁荡平的才智，如果他重新掌握政权，一定请鲁荡平助他一臂之力。§!"
+ POLITICS_HNN_lu_dangping_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1895年，大清帝国 湖南省 宁远县§!\n§Y派系：§!§g第二军§!\n§Y军旅生涯：§!§g鲁荡平早年曾经在湖南铁路学堂学习，后来考入北京法政大学。他起初是同盟会会员，后改入革命中华党。其兄鲁涤平担任建国湘军第二军军长期间，他随军担任参谋。§!" 
+ HNN_Huang_Shiheng_for_sco_desc: "§Y生于：§!§L1889年；大清帝国、湖南省郴州§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L生于一户书香门第，在家庭潜移默化的影响下，黄士衡从小就养成了热爱自学的习惯，打下了坚实的国学根底。辛亥革命爆发两年后，黄士衡考取留美公费生，先后毕业于哥伦比亚大学和艾奥瓦大学，并获得了多个学位。\n\n在纽约《民气周报》担任一段时间主编后，黄士衡于1920年毕业回国。回国后，他在四川成都高等师范学校任文史系主任。随后前往湖南，在湖南商业专门学校任职，后来又成为该校校长，并在湖南大学的创立中发挥了关键作用。\n\n尽管北伐期间时局动荡不安，但黄士衡仍两度担任湖南省教育厅厅长，致力于充实发展教育事业，同时推动了湖南省公立和私立学校的长足发展。随着汤芗铭介入，谭延闿掌权，湖南局势日趋稳定，黄士衡的职业生涯也得以更进一步，1932年他被任命为湖南大学校长，黄士衡成立了一个7人委员会以保障该省教育质量。此后，他为文化和教育事业做出了诸多重大贡献，包括向政府下辖的学校和图书馆捐款等。§!"
+ HNN_wang_tianpei_for: "王天培"
+ HNN_wang_tianpei_for_desc:0 "§Y生于：§!§L1888年12月；大清帝国、贵州省天柱§!\n§Y派系：§!§l共和派§!\n§Y背景：§!§L作为一名决心报国之士，在黄兴领导的武汉起义中，王天培被任命为凤凰山要塞司令。辛亥革命成功后，因立有军功，王天培被送入著名的保定军校深造，在那里他进一步提升了自己的军事指挥能力。\n\n在反对袁世凯的护国战争中，王天培在黔军中逐步晋升，这一时期也奠定了该地区的政治格局。起初，他是贵州军阀袁祖铭的下属，但由于他与革命领袖孙中山的交往，他被割据西南的军阀们夺去了实权，这进一步点燃了他的共和主义热情。\n\n怀着满腔革命热情，王天培成为了国民革命军第十军军长，率领该军参与北伐，并于湘北取得了诸多胜利。然而，随着王天培部于武汉惨败，蒋介石的广州政府又在其南撤途中垮台，一切戛然而止。北伐失败后，王天培在谭延闿政府任职，作为湘南湘西边境持续不断土匪问题的专职顾问。§!"
+ HNN_hu_ying_eco: "胡瑛"
+ HNN_hu_ying_eco_desc:0 "§Y生于：§!§L1884年；大清帝国、湖南省桃源§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L胡瑛少时经黄兴介绍至武昌，随后加入了清朝新军及华兴会，并参与策划了失败的1904年长沙起义。在暗杀多名清朝官员未遂后，胡瑛逃往日本，后又奉孙中山之命回国。回国后，胡瑛又发动了一次失败的起义，最终遭当地政府逮捕。\n\n在狱中，胡瑛加入了文学社，后于辛亥革命中发挥了关键作用。出狱后，胡瑛通过其革命关系，成为了新生民国（湖北军政府）的首位外交部长。之后，他短暂担任过孙中山的山东都督，后又被临时大总统袁世凯任命为新疆青海屯垦使。随着袁世凯治下的中国日渐混乱，胡瑛加入了支持袁世凯的筹安会，成为“洪宪六君子”之一。在1916年袁世凯去世后，胡瑛是少数几个未被革命党追究之人，后出任护法军湘西招抚使。\n\n1920年，在张敬尧被逐后，胡瑛担任湖南省矿务局协理。在北伐战争后湖南混乱的政局中，胡瑛选择置身事外，不参与任何一派。§!"
+ HNN_ye_dehui_sec: "叶德辉"
+ HNN_ye_dehui_sec_desc:0 "§Y生于：§!§L1864年；大清帝国、江苏省吴县§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L叶德辉曾就读于长沙岳麓书院，于1885年通过科举考试，1892年中进士，清廷授其吏部主事。世纪之交的维新变法时期，叶德辉激烈攻击康、梁变法思想，并破坏湖南新政。\n\n1910年湖南发生严重水灾，叶德辉屯积谷物居奇，激起长沙抢米风潮，被清廷革去功名。辛亥革命期间，叶德辉避往南岳僧寺，1915年任省教育会长，发起成立经学会。袁世凯复辟称帝时，他组织筹安会湖南分会，赞成复辟君主制。\n\n在混乱的1920年代，叶德辉退出了政治舞台，并逃离了湖南，但在清廷复辟后又回到了湖南。现在他已正式退休，并把精力放在编纂儒家经典、撰写史书上。作为湖南最杰出的学者兼守旧派领袖，叶德辉仍有可观的影响力。§!\n\n§Y备注：在这个充斥着共和主义和革命者的时代里，叶德辉是一个颇具影响力的保守派人物。他不仅在长沙农民口中备受非议，同时也受到当地工会运动的批评。然而，他却备受当地精英权贵阶层，尤其是赵恒惕的青睐。§!"
+ HNN_Liu_Zhesheng_cair_desc: "§Y生于：§!§L1914年2月22日；中华民国、直隶省保定\n§Y派系：§!§L无派系§!\n§Y背景：§!§L柳哲生出生于保定，虽然其家族原籍湖南，但在当地广受尊敬享有盛誉。柳家在当地世代经商，因而相当富有。柳哲生之父柳树藩没有继承家族生意，而是进入了保定北洋速成武备学堂。受父亲的影响，柳哲生于1933年进入保定军校学习。在校学习期间，他对高空飞行产生了浓厚的兴趣，并报名参加了飞行员选拔考试。毕业后，湖南省政府聘请他担任家乡航空学员的教官。§!"
+ HNN_Wang_Zhi_sec_ade_desc: "§Y生于：§!§L1907年；大清帝国、湖南省长沙§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L王之先后就读于清华学校、威斯康星大学和洛维其大学，他是湖南陆军中众多新晋青年才俊的代表。1928年，他进入西点军校学习，回国后历任税警总团及湘军排长、连长、营长、团长。在税警部队的服役经历让王之能很好地从有组织结构中甄别渗透者和敌方特工，因此他被选中，成为了湖南情报部门中的一位杰出新人。§!"
  HNN_lu_diping_advisor_desc: "§Y生于：§!§L1887年；大清帝国、湖南省宁乡§!\n§Y派系：§!§l第二军§!\n§Y背景：§!§L鲁涤平于清朝末年投身革命政治，并且参加了辛亥革命。1915年，鲁涤平加入了孙中山的革命阵营，同时在湘军任职。随后几年，鲁涤平壮大为湖南的重要军阀之一，他在赵恒惕和谭延闿之间摇摆不定。因其部下同情谭延闿，鲁涤平最终倒向谭延闿一方，并在赵恒惕将谭延闿逐出湖南后与他一同流亡。\n\n1925年，谭延闿的部队被改编为国民革命军第二军，鲁涤平被任命为副司令。北伐战争中，鲁涤平和第二军入湘作战，但战事最终演变成了一场灾难，国民党对武汉的进攻激怒了德国人，导致他们下场干预。在国民党被彻底击溃后，湖南的第二军陷入了重围。在赵恒惕提出全面赦免第二军后，鲁涤平和谭延闿才得以幸免。自那之后，鲁涤平在湖南过着平静的生活，但如果情况有变，谭延闿有需要时他，他随时准备为之效力§!"
+ POLITICS_HNN_LU_DIPING_DESC:0 "鲁涤平，字咏庵，一作咏安，号旡烦，湖南宁乡人。鲁涤平行伍出身，22岁考入湖南兵目学堂，其立场亲革命党，辛亥革命时参与后续各省独立起义运动。1915年加入中华革命党，1922年升任湖南陆军第二师师长。1924年3月，鲁涤平被孙中山任命为禁烟督办，1924年8月辞退此职务。1924年10月，湖南讨贼军改组为建国湘军，鲁涤平担任建国湘军第二军军长。1925年建国湘军改组为国民革命军，鲁涤平成为国民革命军第二军副军长。1926年7月国民党北伐中，升任第二军军长代理兼右翼指挥官。而当大革命失败之后，鲁涤平和国民党内其他右派将领一起聚集在湖南长沙讨论彼此的出路，但是他并没有选择和大部分右派将领一样去投靠云南的唐继尧。而是留在了湖南和赵恒惕政权达成了和解，在赵氏政府下他并不被信任没有重新掌军，而是转为了衡阳市警察局局长，但是也只是一个空头职务，他手下的副局长们都直接听命于赵恒惕而不是他这个局长。"
  HNN_Hu_Shuhua_eco_sco_desc: "§Y生于：§!§L1886年12月14日；大清帝国、湖南省攸县§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L1903年，胡庶华通过清朝科举考试，考入湖南私立明德学校学习，后来又公费留学德国，先入柏林矿科大学，再转入柏林工科大学学习。1920年，胡庶华以钢铁冶金工程师学位毕业，两年后带着在欧洲各地钢铁厂参观学到的现代工业金属加工技术回国。\n\n回到湖南后，胡庶华被湖南工业专门学校校长宾步程聘为事务主任。后来，他还担任过武昌、同济和湖南大学的校长。胡庶华在湖南大学落实他在实践和教育层面上对工业发展的愿景，恢复了矿冶工程系，并邀请了许多专家来校任教。\n\n胡庶华强调学生的工业教育，提倡与省内矿冶企业协作交流，并致力于将湖南大学建设成全国钢铁冶金人才培养的重镇。1934年夏天，胡庶华在湖南筹办了中国经济学社第11届学术年会，这是该年会首次在华东新兴沿海城市之外举办。§!"
  HNN_li_jiannong_for: "李剑农"
  HNN_li_jiannong_for_desc:0 "§Y生于：§!§L1880年6月10日；大清帝国、湖南省邵阳§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L李剑农生于一户农民家庭，长大后在当地的一所书院就读。李剑农对当地不学无术的官员极为不满。1904年，他进入湖南中路师范学堂学习，主修历史，并顺利毕业。在日本学习经济学期间，李剑农与孙中山和同盟会相识。清朝覆灭后，李剑农成为了民国的坚定拥护者。\n\n李剑农在自己的报纸上鼓吹联省自治，抨击军阀乱政。李剑农对联省自治和改良政治的研究引起了湖南省长赵恒惕的注意，赵恒惕于1922年邀请李剑农到长沙起草省宪。此后，李剑农留在湖南，帮助赵恒惕推行其政治纲领。李剑农在推动联省自治方面的工作使他成为了赵恒惕的得力助手和湖南联省派中的一位出色理论家。§!"
@@ -184,6 +204,7 @@
  POLITICS_HNN_long_yunfei_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1886年；大清帝国、湖南省凤凰§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!§g龙云飞是苗族人，18岁时离家外出，沦为盗匪。入哥老会后的几年里，他结伙赌博，贩运烟土，包路护送客商。和那个时代的其他著名土匪一样，辛亥革命后他被任命为军官，并从营长一路晋升到师长。他在湘西地区活动，听命于湘西两巨头田应诏和陈渠珍，虽然并非善类，但他为人诚实。§!\n\n§Y重要信息：据称，因其非法商业活动，龙云飞在湖南拥有超过14公顷的土地，但他拒绝透露土地的具体位置。§!"
  POLITICS_HNN_dai_jitao_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1891年；大清帝国、湖南省凤凰§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!§g1921年从云南陆军讲武堂毕业后，戴季韬投身于湘军服役。1925年，他被任命为田应诏和陈渠珍下属的湘西屯边使署教导团团长。当国民党对湖南发动进攻时，他的地位受到了威胁，但幸运的是，国民大革命以失败告终，吴佩孚控制了华南地区。近十年来，汤芗铭对湘西镇守使一直很满意，戴季韬也致力于维护陈渠珍在湘西的实际领导地位。§!"
  POLITICS_HNN_zhou_xicheng_ARMY_DESC:0 "§Y陆军将领介绍\n生于：§!§g1893年4月7日；大清帝国、贵州省桐梓县§!\n§Y派系：§!§N旧黔系§!\n§Y军旅生涯：§!§g周西成生于地主家庭，十六岁进入桐梓县公立明德小学堂，1911年毕业后，一心想弃文就武。适逢赵文彬从保定武备学堂毕业，到黔北一带募兵，周西成与妹夫毛光翔相约入伍。辛亥革命后，周西成任军政府都督杨荩诚的副目。\n\n随后杨荩诚率部入侵湖南，攻至常德，命周西成驻守。1913年滇军据黔，周西成部遭到遣散。护国战争中，他在戴戡率领下，出师四川。激战正酣时，戴戡战死，周西成率其营突围回黔。直到1922年前，他完全控制了其旅，不过仍受袁祖铭全面指挥。\n\n出于对袁祖铭野心的忌惮，周西成趋承于袁的左右，博取袁的信任。国民党发动北伐战争后，袁祖铭与之结盟，这不过是权宜之策，而随后又在其下属周西成建议下背叛了他们。袁祖铭被北京方面任命为贵州督理，但黔地大部实际被滇军控制。这一局面持续了近十年，周西成也始终站在袁祖铭一边。\n\n§Y重要信息：他以总是率部亲自冲锋在前、直接指挥下属而闻名。\n\n周西成以在贵州开展大规模剿匪行动而闻名，他在该省设立了护商总所，并在沿途设立了商卡子，并实施了商业保险制度。\n\n周西成是个残暴的人，他有能力实施大规模的暴行，他也以严厉惩罚其辖区内的所有腐败行为而闻名，过去他曾处决过许多腐败官员，并枪杀过其他人。§!"
+ HNN_he_jian: "何键"
  POLITICS_HNN_HE_JIAN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1887年4月10日，大清帝国 湖南省 醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g何键最初打算从事文职工作，但在辛亥革命爆发后，何键发现在北洋政府的新式陆军中晋升更快，并可以借此获得更高的地位和名望。\n\n何键先是入读湖南将校养成所，后又被提拔到南京的一个学生团，随后就读于湖北陆军第三中学，最后进入保定武备学堂，并于1916年毕业于步兵科。怀着仕途坦荡的希望，何键回到了湖南，但1917年反对汤芗铭督军的暴动让他的希望破灭了。于是在赵恒惕的授意下，何键拉起了一支地方游击队，以对抗北洋入侵者。\n\n何键以自己的部队为谈判筹码，被提拔为唐生智下辖的一个师中的营长，由此开始了与后者长期共事的生涯。他与李品仙的晋升经历相似，二人后来都当过第八军第二师的师长，又都加入了国民革命军和国民党。在北伐战争中，他随第八军北上，但与激进社会主义者贺龙和彭德怀的关系逐渐疏远。\n\n随着近期政坛风向的转变，何键得到了提拔，他现在可能是湖南省国民党内最有影响力的成员之一，并试图推行一系列影响深远的改革措施。§!" 
  ARMY_HE_LONG_DESC:0 "§Y指挥官介绍\n生于：§!§g1896年3月22日，大清帝国 湖南省 桑植县§!\n§Y派系：§!§R国民党第八军亲工团派§!\n§Y军旅生涯：§!§g贺龙是土家族与汉族混血，生于一户贫苦农民家庭。少年的贺龙以其正直忠诚而闻名乡里。1914年，贺龙加入了孙中山的中华革命党。1918年，他在湘西组织起一支农民革命武装，并因此赢得了“绿林好汉”的名声。1920年，受到桃源知识分子的影响，贺龙开始接触马克思主义。1922年，应孙中山请求，贺龙率军进入四川，但由于军队内部分裂，未能取得重大进展。\n\n这段经历使他反对孙中山与地方军阀合作的政策。1924年，在第一次改组以及与第三国际结盟后，他加入了国民党。被赵恒惕赶出四川后，贺龙退到了贵州。1926年，贺龙将他的军队并入了唐生智将军的第八军，作为国民党的军阀盟友，唐生智希望能从赵恒惕手中夺回湖南。在北伐战争中，贺龙与第八军表现优异，但德国的干涉以及攻占武汉的失利，导致了国民党的失败。\n\n汪精卫率领中央委员会流亡巴黎，并在那里待了近十年。独立于中央委员会之外的唐生智则率领部下进入邻近的江西以躲避赵恒惕的还乡团，并在该地与孙传芳的部队展开游击战。1932年上海起义后，唐生智又与邓演达的闽赣起义军联合。贺龙在第八军中建立了一个更激进的派系，并任命彭德怀为其副手，他自己则作为该派系的非正式领导人。贺龙希望他的上级唐生智会与以农民为重的宋庆龄临委会结盟。§!"
  ARMY_TENG_DAIYUAN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1904年11月2日，大清帝国 湖南省 麻阳县§!\n§Y派系：§!§R工团党§!\n§Y军旅生涯：§!§g滕代远毕业于常德湖南省立学校，在1925年春天北伐前夕加入了国民党，后来又凭着对社会主义的一腔热情转投中国工团党，并担任湖南省农民协会主席。北伐失败后，这位年轻的军官转入地下工作，领导着一队反抗势力。§!"
@@ -197,8 +218,6 @@
  ARMY_FANG_DING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1888年，大清帝国 湖南省 新化县§!\n§Y派系：§!§c联省派\n§Y军旅生涯：§!§g方鼎英15岁时，赴日本留学，参加同盟会。回国后在保定军官学校任炮兵教官，参加武昌起义，民国六年，再次赴日本留学。民国十年春，回国在湘军中任职。后任黄埔军校入伍生部部长，进行诸多军事教育改革。在大革命失败之后，方鼎英回到湖南投靠其学生刘咏尧，在其所部任职。§!"
  HNN_li_minghao: "李明灏"
  POLITICS_HNN_LI_MING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1897年9月19日，大清帝国 湖南省 醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g李明灏是一名天生的军人。20岁时，他考入清河陆军第一预备学校第四期学习，由于表现优异，毕业后被保送到日本陆军士官学校深造。毕业后，李明灏前往长沙陆军讲武堂任教。1923年，应程潜之邀，李明灏在孙中山领导的广州大本营军政部中担任中校，在此过程中加入了国民党。\n\n同年，孙中山任命程潜为军政部长，并担任黄埔军校校长（尽管任期很短）。程潜随后委任他为上校兼军校教育长。不久后，李明灏改任由孙中山领导的攻鄂军司令部参谋，后来成为程潜东征部队的参谋长。作为第17师54团上校团长，李明灏率部参加了北伐，在北伐失败后，他又跟随程潜和其他第六军同僚一道进入贵州。然而，李明灏始终保持着警惕，继续勤奋工作，最终被任命为第17师师长。\n\n随着第六军和第八军之间的紧张局势不断升级，程潜再次提拔李明灏为少将，试图通过一系列快速任命在与唐生智的较量中扳回一城。§!"
- HNN_lu_dangping: "鲁荡平"
- POLITICS_HNN_lu_dangping_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1895年，大清帝国 湖南省 宁远县§!\n§Y派系：§!§g第二军§!\n§Y军旅生涯：§!§g鲁荡平早年曾经在湖南铁路学堂学习，后来考入北京法政大学。他起初是同盟会会员，后改入革命中华党。其兄鲁涤平担任建国湘军第二军军长期间，他随军担任参谋。§!" 
  HNN_que_hanqian: "阙汉骞"
  POLITICS_HNN_que_hanqian_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1901年1月19日，大清帝国 湖南省 宁远县§!\n§Y派系：§!§g第二军§!\n§Y军旅生涯：§!§g阙家世代耕读，阙父兴富公，母李太夫人，兄弟四人，一姊，阙汉骞为老幺，六岁延师课读。九岁入平田伦英初小，三年后考入宁远县立高小。毕业后，入第十三联合中学，为四年旧制，毕业之时，正值五四运动，考入湖南公立法政学校，适逢母丧辍学。1920年，与杨如女士结婚。后入常澧镇守使学兵队受训，期满入教导团接受军官训练。1925年，考入黄埔军校第四期步科，先接受入伍教育，1926年10月毕业，任第五期学生区队附。后随谭延闿所帅第二军入湖南，在北伐战争失败后。阙汉骞是少有的留在湖南的国民党军人。§!" 
  HNN_Zhang_Zhen: "张轸"
@@ -553,6 +572,7 @@
  HNN_vital_economic_linchpin_tt:0 "§L我国经济相关的国家精神将整合为一个§Y全新的国家精神！§!§!"
  HNN_industrial_reform_complete_tt:0 "§L我们现在可以选取§Y“[HNN_fostering_national_reconstruction_loc]”§!并推进湖南工业树§!"
  HNN_clearing_house_tt:0 "§L我们采纳新军事学说的工作势必十分艰巨，但其最终将会使我们获得§!§Y50§!£GFX_army_experience §L作为回报§!"
+ HNN_lian_sheng_goverment_tooltip: "泛§c联省派§!政府"
  HNN_hu_shuhua_effect: "§Y工业相关的决议§!增强"
  HNN_hu_shuhua_add_tooltip:0 "使$HNN_hu_shuhua_effect$"
  HNN_hu_shuhua_helpful_tooltip:0 "§n有胡庶华作为顾问会使$HNN_hu_shuhua_effect$§!"
@@ -561,6 +581,37 @@
  HNN_lu_diping_add_tooltip:0 "使$HNN_lu_diping_effect$"
  HNN_lu_diping_helpful_tooltip:0 "§n有鲁涤平作为顾问会使$HNN_lu_diping_effect$§!"
  HNN_lu_diping_is_helpful_tooltip:0 "§G鲁涤平在我们的政府中工作会$HNN_lu_diping_add_tooltip$§!"
+ HNN_ye_dehui_add_tooltip:0 "使$HNN_ye_dehui_effect$"
+ HNN_ye_dehui_helpful_tooltip:0 "§n有叶德辉作为顾问会使$HNN_ye_dehui_effect$§!"
+ HNN_ye_dehui_is_helpful_tooltip:0 "§G叶德辉在我们的政府中工作会$HNN_ye_dehui_add_tooltip$§!"
+ HNN_hu_ying_effect: "§Y妥协相关的决议§!增强"
+ HNN_hu_ying_add_tooltip:0 "使$HNN_hu_ying_effect$"
+ HNN_hu_ying_helpful_tooltip:0 "§n有胡瑛作为顾问会使$HNN_hu_ying_effect$§!"
+ HNN_hu_ying_is_helpful_tooltip:0 "§G胡瑛在我们的政府中工作会$HNN_hu_ying_add_tooltip$§!"
+ HNN_wang_tianpei_effect: "§Y两巨头相关的决议§!增强"
+ HNN_wang_tianpei_add_tooltip:0 "使$HNN_wang_tianpei_effect$"
+ HNN_wang_tianpei_helpful_tooltip:0 "§n有王天培作为顾问会使$HNN_wang_tianpei_effect$§!"
+ HNN_wang_tianpei_is_helpful_tooltip:0 "§G王天培在我们的政府中工作会$HNN_wang_tianpei_add_tooltip$§!"
+ HNN_huang_shiheng_effect: "§Y教育相关的决议§!增强"
+ HNN_huang_shiheng_add_tooltip:0 "使$HNN_huang_shiheng_effect$"
+ HNN_huang_shiheng_helpful_tooltip:0 "§n有黄士衡作为顾问会使$HNN_huang_shiheng_effect$§!"
+ HNN_huang_shiheng_is_helpful_tooltip:0 "§G黄士衡在我们的政府中工作会$HNN_huang_shiheng_add_tooltip$§!"
+ HNN_zhang_huizan_effect: "§Y情报相关的决议§!增强"
+ HNN_zhang_huizan_add_tooltip:0 "使$HNN_zhang_huizan_effect$"
+ HNN_zhang_huizan_helpful_tooltip:0 "§n有张辉瓒作为顾问会使$HNN_zhang_huizan_effect$§!"
+ HNN_zhang_huizan_is_helpful_tooltip:0 "§G张辉瓒在我们的政府中工作会$HNN_zhang_huizan_add_tooltip$§!"
+ HNN_zhou_shizhao_effect: "§Y民主与城市相关的决议§!增强"
+ HNN_zhou_shizhao_add_tooltip:0 "使$HNN_zhou_shizhao_effect$"
+ HNN_zhou_shizhao_helpful_tooltip:0 "§n有周世钊作为顾问会使$HNN_zhou_shizhao_effect$§!"
+ HNN_zhou_shizhao_is_helpful_tooltip:0 "§G周世钊在我们的政府中工作会$HNN_zhou_shizhao_add_tooltip$§!"
+ HNN_qian_yongming_effect: "§Y民主与经济相关的决议§!增强"
+ HNN_qian_yongming_add_tooltip:0 "使$HNN_qian_yongming_effect$"
+ HNN_qian_yongming_helpful_tooltip:0 "§n有刘廷芳作为顾问会使$HNN_qian_yongming_effect$§!"
+ HNN_qian_yongming_is_helpful_tooltip:0 "§G刘廷芳在我们的政府中工作会$HNN_qian_yongming_add_tooltip$§!"
+ HNN_zhong_boyi_effect: "§Y宪法与工业相关的决议§!增强"
+ HNN_zhong_boyi_add_tooltip:0 "使$HNN_zhong_boyi_effect$"
+ HNN_zhong_boyi_helpful_tooltip:0 "§n有钟伯毅作为顾问会使$HNN_zhong_boyi_effect$§!"
+ HNN_zhong_boyi_is_helpful_tooltip:0 "§G钟伯毅在我们的政府中工作会$HNN_zhong_boyi_add_tooltip$§!"
 
  modifier_army_sub_unit_irregular_max_org_factor_tooltip:0 "$modifier_army_sub_unit_irregular_infantry_max_org_factor$：$RIGHT|+=%2$"
  modifier_army_sub_unit_irregular_attack_factor_tooltip:0 "$modifier_army_sub_unit_irregular_infantry_attack_factor$：$RIGHT|+=%2$"
@@ -1174,6 +1225,7 @@
  POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。\n\n如今他正式肩负起领导全中国政府的重任，稳定、和平、温和将是他执政的方针。"
  Kang_Shen_DESC:0 "康生，原名张宗可，字少卿（绍卿），生于山东省胶州大台庄当地的一个名门望族，先祖张若獬，崇祯七年进士，南京户部主事，祖父张鸿仪曾为贡生。由于其出生于书香世家，由幼年时代便开始接触文艺作品，因此擅长书法绘画。1924年，张宗可赴上海大学学习，并改名张溶。在大学学习时，担任上海总工会干事、上海大学特支书记。1927年大革命失败后，张宗可出逃海外，在法国的第三国际总部进修。但是在此期间张宗可逐步接受到俄国的布尔什维克思想与英国莫斯利发起的准则派运动的感染，他私下为自己取名康斯坦丁（Константи́н），其中文音译为康生。同样在流亡法国时期，康生被吸纳进入了周恩来领导的特科中，他也假装是中裔俄国人重新回到上海加入革命事业中，在特科的时日内由于其出色的能力，他成功晋升到了特科副手，兼行动科长的地位。"
  POLITICS_HNN_LIN_BIAO_DESC:0 "林彪出生于殷实的商人家庭，青年时期，他就见证了父亲的生意因军阀剥削而陷入困顿。他成为了一名左翼活动家，参加过各种学生罢课与抗议活动，后逃往南方投考新设立的黄埔军校。\n\n作为一名年轻学员，林彪钦佩校长蒋介石的气质。他在校内表现优异，后参与北伐，几个月就从见习排长晋升到营长。北伐失败后，他仍然追随叶挺，与国民革命军残余的大部队转入地下打游击。正是在闽赣的群山之中，林彪这个名字变得越来越响亮了。但也正是在闽赣他接受到了来自另一个革命根据地——湖南三省边界根据地传播的工团思想。尽管他对这些思想并没有太大兴趣，但他对这些人实际实现的布尔什维克制度更感兴趣，他在其中看到了一条有别于现在中国大多数革命者的“新”的道路。"
+ HNN_he_long: "贺龙"
  POLITICS_HNN_HE_LONG_DESC:0 "贺龙在贫苦农家中出生长大，从小没怎么受过正规的教育。贺龙的父亲是名清朝小吏，颇有番武力，这些才能在贺龙身上也有所体现。20岁时，贺龙的叔叔因欠债被税吏活活打死，而贺龙一气之下直接杀掉了税吏，从此开始了他那漫长的游击斗争生涯。1920年，国民党异军突起，此时贺龙劫富济贫的法外好汉的名气越传越远，他带着爱刀一人一刀组建了一支地方部队。北伐期间，贺龙在张发奎手下担任教官与指挥官的角色，也在党内找到了自己的归宿——社会主义。北伐的失败并没有浇灭贺龙渴望祖国变革的热情，虽然他被迫退回老家湖南省，但是在湖南他和彭德怀一同为工团主义者的活动提供庇护。"
  POLITICS_HNN_YE_JIAN_YING_DESC:0 "叶剑英1919年毕业于云南军校，同年加入国民党。在“六一六”事变期间，他站在孙中山一边，公开与陈炯明在广州的势力作战，并帮助孙中山逃离广州。他是建立黄埔军校的主要参与者之一，并在那里教书。曾任师长，参加过北伐战争与镇压广州商团的行动。国民革命军失败后，叶剑英回到广东，加入中国工团党。尽管理论上叶剑英应该和广州商团完全敌视，但事实上，二者的关系相当不错。这也让他对于经济建设工作有了别样的思考..."
  POLITICS_HNN_MAO_ZHE_DONG_DESC:0 "毛泽东生于湖南湘潭韶山冲，幼年入私塾读书，曾务农。1918年4月14日，新民学会在蔡和森家中成立，萧子昇为总干事，毛泽东为干事；不久萧子昇赴法国勤工俭学，会务由毛泽东主持。同年10月，经恩师杨昌济介绍，毛泽东认识了时任北京大学图书馆主任，日后的革命家李大钊，李大钊安排他当了月薪8元的图书馆书记。1920年底，毛泽东先后参与组建长沙社会主义小组和长沙社会主义青年团。1921年，毛泽东出席参与中国工团党第一次代表大会，建立中国工团党。\n\n两党合作之后，毛泽东一度担任国民党上海执行部组织部秘书、代理宣传部长，1926年入选国民党中央执行委员会委员。同年由于北伐战争的失败，对革命丧失信心的毛泽东改名换姓重新返回了他的故乡湖南湘潭在一所私塾中教书躲避军阀赵恒惕的通缉。不过这种失落是短暂的，随着董必武、何叔衡等人在湖南三省边界建立起革命根据地。得到消息的毛泽东第一时间申请加入根据地工作，但是董必武并没有将他留下反而是建议他利用自己教书先生的身份返回长沙做地下工作。在王震的协助下，毛泽东筹建起来被捣毁的长沙支部，任支部书记。他白天在学校教师，晚上办报纸、撰写宣传册、向根据地转发情报。在建国以后，毛泽东担任起了湖南省委书记的重任。\n\n他本以为随着全国统一就能够让中华儿女过上更好的生活，让贫苦的农民摆脱贫困，但他错了。党中央在土地改革才刚刚起步时就宣布了土地改革结束，这种赤裸裸的背叛行为引发了他的反击，如今他成功登上了中国的政治巅峰，他将按照自己的意愿重塑中国的革命。"
