--- a/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
+++ b/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
@@ -1774,6 +1774,7 @@
  lepcollapse.37.a: "快请他来作诗一首。"
  lepcollapse.37.b: "三姓家奴，又想着改换门庭了。"
 
+ LEP_collapse_threat: "八省联合崩溃"
  LEP_authoritarian_democrat_party_aog: "华东董事会"
 
  LEP_nationalist_desc: "虽然在中国的反租界人士眼中，八省联合无疑是一个面目可憎的敌人，但我们却成功博得了更加温和而又务实的民族主义者的欢心，他们表示只要能建立起一个国力与德行并存的中国，对德合作又何妨。"
