--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -3,3 +3,22 @@
  KR_head_of_intelligence: "间谍首脑"
  KR_republican_firebrand: "共和派鼓动者"
  KR_political_specialist: "政治专家"
+ KR_air_chief_reform_2: "空军改革\n（大师）"
+ KR_army_chief_organisational_1: "陆军组织\n（专家）"
+ KR_army_chief_organisational_2: "陆军组织\n（大师）"
+ KR_army_chief_organisational_3: "陆军组织\n（奇才）"
+ KR_MHC_army_regrouping_1: "陆军重组\n（专家）"
+ KR_MHC_army_regrouping_2: "陆军重组\n（大师）"
+ KR_MHC_army_regrouping_3: "陆军重组\n（奇才）"
+ KR_MHC_entrenchment_1: "堑壕作战\n（专家）"
+ KR_MHC_entrenchment_2: "堑壕作战\n（大师）"
+ KR_MHC_entrenchment_3: "堑壕作战\n（奇才）"
+ KR_army_chief_manoeuvre_1: "陆军机动\n（专家）"
+ KR_army_chief_manoeuvre_2: "陆军机动\n（大师）"
+ KR_army_chief_manoeuvre_3: "陆军机动\n（奇才）"
+ KR_MHC_artillery_1: "炮兵部队\n（专家）"
+ KR_MHC_artillery_2: "炮兵部队\n（大师）"
+ KR_MHC_artillery_3: "炮兵部队\n（奇才）"
+ KR_MHC_infantry_1: "步兵部队\n（专家）"
+ KR_MHC_infantry_2: "步兵部队\n（大师）"
+ KR_MHC_infantry_3: "步兵部队\n（奇才）"
