--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -3207,7 +3207,14 @@
  GXC_BRA: "木材王国"
  GXC_BRA_ADJ: "巴西子公司"
  GXC_BRA_DEF: "巴西子公司"
+ GXC_fire: "重庆自由地带"
+ GXC_fire_ADJ: "重庆自由地带"
+ GXC_fire_DEF: "重庆自由地带"
  autonomous_rich_puppet: "子公司"
+
+ GXC_free_fire_yi_qie:0 "焚毁一切\n§g火焰！燃烧！狂舞的炽焰撕裂虚空，吞噬天地，赤红的狂潮如梦魇般席卷万物！烈焰在咆哮，在扭曲，在狂欢，在高歌！一切都在溶解，世界在烈焰的颂歌中尖叫着崩塌！毁灭！重生！净化！伟大的火焰，吞噬吧！吞噬吧！让万物在炽烈的癫狂中化作最纯粹的尘埃！§!"
+ GXC_fire_party:0 "error"
+ GXC_fire_party_long:0 "error\n§gerror§!"
 
  GXC_Reapproachment_with_Yunnan2:0 "处理邻里关系"
  GXC_Reapproachment_with_Yunnan2_desc:0 "我们同云南的冲突不能再继续下去了，这对共和百害而无一利，是时候重新同他们联起手来对抗专制了，不然北方的残暴军阀就会将我们一个接一个地消灭掉。"
@@ -3354,6 +3361,8 @@
  GXC_chong_jian_CSA_desc:0 "我们的老大个“疤脸”阿尔·卡彭放下了手中的武器，戴上手套做起了炸鸡，这下集团的伙食有保障咯。"
  GXC_chong_jian_MEX:0 "组建墨西哥子公司"
  GXC_chong_jian_ri_ben_flag:0 "挑选日本子公司旗帜"
+ GXC_fire_everything:0 "焚毁一切"
+ SZC_Post_An: "error"
 
  GXC_shangye_fan_rong:0 "商业繁荣"
  GXC_shangye_fan_rong_desc:0 "整个世界上最适合做生意的地方，遍地都是机遇，到处都是商机。"
@@ -3636,8 +3645,11 @@
  lngst.50.d:0 "可口可乐，那抓人眼球的包装，恰到好处的气泡，入口极致的甘甜，每个品尝过可口可乐的国民都发自心底地喜欢上了它。然而，就是这样美好的东西，却只在深巷小贩和地下酒馆里苟延残喘地活着，任何胆敢僭越百事可乐地位的国民都会被逮捕，扑杀，好似被围猎的巫女。他们中有的住进了西冰库，有的被沉进了汉江，但更多的是被乱枪打死在某个阴沟小巷里，亦或是在一阵突如其来的敲门声后死在开门前的一刹那。\n\n此刻已是深夜两点，亮的发暗的小酒馆里弥漫着硝烟和铁腥味，高木正雄穿着那身衣角笔直的军装好整以暇地坐在吧台，几分钟前还在和他聊着怎么给学校里挑食的女儿带什么饭才行的老板，此刻已经倒在血泊中；邻座那个最爱喝可口可乐的小孩，每次喝多了就恶作剧般冲到他面前朝他打嗝的小屁孩，现在瞳孔涣散，手里紧握的钢签被无力地丢下，嘴角流着血，卧在他身旁；那个总是望着他发呆，时不时给他添上满杯的可人儿，靓丽的脸上多了两个黑红相间的可怖孔洞，她写满凄美的眼睛再也不能温柔地望向他了。\n\n“多好的饮料啊”，他端着玻璃杯，抿了一小口，看着杯子里鲜红的液体映照着的他。回过身，高木正雄对着门前几支澄亮的手电筒，高高举起了酒杯，好似举起了象征着冠军的奖杯，“没喝过这么好的吧，这点就送你们了，希望...”\n\n“砰”地一声枪响，打断了他的话。高木正雄望着胸前不断扩张的红色，“真的好像可口可乐一样啊”，他忽然想到，“喝完再走，那可真好。”他露出了解脱般的笑容，随后一阵疾风骤雨般的枪声在这个阴暗逼仄的小酒馆里爆发。然而在那暴风雨般的激昂乐章下，如血的革命种子已经悄然播撒。"
  lngst.50.a:0 "会吗？"
  lngst.51.t:0 "可乐天皇"
- lngst.51.d:0 "当一瓶可口可乐接过天丛云剑和八尺玉，正式成为新的日本天皇后，舆论的漩涡从东京到京都，如同核弹爆炸一般席卷了整个日本。\n\n人们首先想到的是伦理问题，如果可口可乐成为了天皇，那么那些商店里摆的一排一排的饮料，是否是天皇的子嗣或者表亲，甚至是天皇本人，那人们应当如何向一个货架鞠躬？而政府迅速解决了人们的疑惑，这些饮料是天皇的分身，而购买并饮用可口可乐，就是在享受天皇的恩泽。\n\n当付出35日元就能表达效忠天皇时，民众反而体现出极大的热情，这可能是可乐天皇存在合理性的来源。毕竟之前，需要毫无保护的万岁冲锋或者锁住你飞机的驾驶舱撞向敌国军舰，才能表达对天皇的忠心。\n\n在一些商业场所，商家们的反应却各不相同。一些头脑灵活的店主迅速嗅到了商机，他们推出了与可口可乐天皇相关的周边产品，印有可乐瓶天皇形象的T恤、马克杯等，吸引了不少国内外顾客抢购。任天堂也决定制作《可乐天皇传说》系列桌游。随着天皇这一古老的IP如今又焕发新生机，带来极高的商业利润，资本市场愈发的满足这一决定， 料亭里人们衣冠楚楚，觥筹交错，酒杯里全被换成了可口可乐，正享受着这一盛宴。\n\n毫无疑问的，可口可乐公司是这一事件最大的赢家，在9月9日9点9时9分9秒，在可口可乐公司新任总裁、大可口帝国的首相岸信界向公众宣布了可口可乐的全新logo，一只蓝色的双头鸟，又形似蜿蜒的火焰。可口可乐公司解释这些火焰源自于日本绳纹时代著名的火焰陶器，升腾的火焰又像一只只眼睛。\n\n 而漩涡的中心，东京都千代田区皇居，这里无比安静，毕竟新天皇除了偶尔冒出几粒气泡，并不对外发表任何政治意见，堪称立宪君主的楷模。"
+ lngst.51.d:0 "当一瓶可口可乐接过天丛云剑和八尺玉，正式成为新的日本天皇后，舆论的漩涡从东京到京都，如同核弹爆炸一般席卷了整个日本。\n\n人们首先想到的是伦理问题，如果可口可乐成为了天皇，那么那些商店里摆的一排一排的饮料，是否是天皇的子嗣或者表亲，甚至是天皇本人，那人们应当如何向一个货架鞠躬？而政府迅速解决了人们的疑惑，这些饮料是天皇的分身，而购买并饮用可口可乐，就是在享受天皇的恩泽。\n\n当付出35日元就能表达效忠天皇时，民众反而体现出极大的热情，这可能是可乐天皇存在合理性的来源。毕竟之前，需要毫无保护的万岁冲锋或者锁住你飞机的驾驶舱撞向敌国军舰，才能表达对天皇的忠心。\n\n在一些商业场所，商家们的反应却各不相同。一些头脑灵活的店主迅速嗅到了商机，他们推出了与可口可乐天皇相关的周边产品，印有可乐瓶天皇形象的T恤、马克杯等，吸引了不少国内外顾客抢购。任天堂也决定制作《可乐天皇传说》系列桌游。随着天皇这一古老的IP如今又焕发新生机，带来极高的商业利润，资本市场愈发的满足这一决定， 料亭里人们衣冠楚楚，觥筹交错，酒杯里全被换成了可口可乐，正享受着这一盛宴。\n\n毫无疑问的，可口可乐公司是这一事件最大的赢家，在9月9日9点9时9分9秒，在可口可乐公司新任总裁、大可口帝国的首相岸信界向公众宣布了可口可乐的全新logo，一只蓝色的双头鸟，又形似蜿蜒的火焰。可口可乐公司解释这些火焰源自于日本绳纹时代著名的火焰陶器，升腾的火焰又像一只只眼睛。\n\n而漩涡的中心，东京都千代田区皇居，这里无比安静，毕竟新天皇除了偶尔冒出几粒气泡，并不对外发表任何政治意见，堪称立宪君主的楷模。"
  lngst.51.a:0 "要来一瓶吗？"
+ hnn.fire.t:0 "点燃火焰"
+ hnn.fire.d:0 "夜色扭曲，霓虹像神经错乱的电流在城市上空炸裂，一个疯子站在酒吧门口，手中的酒瓶晃晃悠悠，他笑了，嘴角拉开一道癫狂的弧度。他的眼睛里燃烧着某种比烈酒更炽热的东西——毁灭，彻底的毁灭！\n\n他踉跄着后退，像是要摔倒，却稳稳地站在废墟边缘，手指轻轻一按。\n\n轰——！！爆炸撕裂了夜幕，火光炸成无数张狂的獠牙，吞噬整条街道。玻璃在嘶鸣，金属在融化，尖叫声交织成一首癫狂的赞歌！人群四散奔逃，又在混乱中狂笑、呐喊，仿佛整个城市的脉搏都跟着他的酒精一同沸腾。\n\n陈廉伯的鹰犬蜂拥而至，直升机在火焰中冷漠地旋转，数据洪流疯狂计算着毁灭的代价。但他站在烈焰中央，张开双臂迎接这疯狂的风暴，他的影子被燃烧的广告牌拉长，化作都市地狱的引路人。\n\n“你们以为你们掌控一切？！” 他狂笑，声音穿透烈火。“看看吧，看看这座被规则禁锢的城市如何在混乱中复活！！”烈火燃尽规则，爆炸冲破秩序，人们的呐喊化作狂潮，吞没冷漠的巨型机器。黑夜不再沉默，整个城市在癫狂中苏醒！夜色被撕裂，霓虹灯在爆炸的冲击下摇晃，像是城市最后的疯狂低语。他站在火焰中央，嘴角带着一丝玩世不恭的笑意，酒精和硝烟混合成令人眩晕的气息。他抬头望向夜空，仿佛在欣赏自己的杰作。街道在燃烧，城市在咆哮，监控探头在烈焰中微微闪烁着冷静的红光，像是无声的凝视，像是见证一个既定的未来。\n\n“看看吧！看看这个城市真正的血肉——愤怒、混乱、不安分的灵魂！你们本该如此，你们本该燃烧！”他的声音淹没在人群的呐喊之中。人们狂欢，冲向燃烧的废墟，抛弃枷锁，迎接毁灭的洗礼。\n\n可是谁会注意到？谁会去思考，是谁引导了这一切？是谁把火种放入他们手中？\n\n他缓缓低下头，抬起手腕，微不可察地滑动指尖。一串加密信号在皮肤下亮起，微弱的蓝光闪烁片刻，消失在掌心。他的笑意更深了，像是品味一场精心编排的戏剧。远处的企业大厦依然屹立不倒，冷漠地俯视着这一切，就像早已预料到的那样。\n\n爆炸、反抗、怒火……这座城市终于“觉醒”了，而他们，只是按下了开关。"
+ hnn.fire.a:0 "怒火燃城，操纵者仍在幕后冷笑。"
 
  #军改
  GXC_shang_tuan_jun_shi_gai_ge:0 "暴力亦是商品"
