--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -289,6 +289,7 @@
  HNN_remove_tan_votes_tt:0 "§c谭延闿§!的支持度将§r降低！§!\n"
  HNN_remove_zhao_votes_tt:0 "§s赵恒惕§!的支持度将§r降低！§!\n"
  HNN_remove_chen_votes_tt:0 "§g陈渠珍§!的支持度将§r降低！§!\n"
+ HNN_campaigned_last_days:0 "选举即将结束"
 
  HNN_remove_tan_votes:0 "抵制谭延闿的竞选活动"
  HNN_remove_tan_votes_desc:0 "谭延闿是现任省长，而且有汤芗铭的扶持，他最有可能赢得选举。我们要把选举活动的重点调整为诋毁谭延闿，指出他和直系军阀们的裙带关系。"
@@ -2073,6 +2074,9 @@
  HNN_ping_eng_jing_ji:0 "中德贸易"
  HNN_war_to_RUS:0 "中德对俄战争"
  HNN_new_order:0 "新秩序"
+ HNN_attack_fed_SZC_idea:0 "推翻四川反革命政府"
+ HNN_attack_fed_YUN_idea:0 "推翻云南反革命政府"
+ HNN_attack_fed_GXC_idea:0 "推翻两广反革命政府"
  HNN_jing_shen_si_jieB:0 "外景"
  HNN_jing_shen_si_jieC:0 "内景"
  HNN_casc:0 "航空航天局"
@@ -3362,9 +3366,9 @@
  hungong.171.t:0 "雨落之后，云水相逢"
  hungong.171.d:0 "点点雨星哒哒地落在马车的油布篷上，朱德裹紧被硝烟熏黑的大衣。车帘缝隙里透进的月光照着他手背的伤口，凝结的血痂像一朵枯萎的梅花。\n"先生，过了前头隘口就到湖南啦。"车夫的声音夹着湿气传来。朱德摸向腰间，铁皮油灯还在，灯罩裂了道细纹——这是三天前张副官塞给他的。那夜里机枪正把土墙打得噗噗作响，那个总爱哼小调的年轻人把油灯往他怀里一推："往东走！我们在枫叶岭还有......"后半句被炮弹声吞没了。\n车轮碾过泥泞的土路，往事如走马灯旋转，朱德闭上眼，仍能看见总务长老周被吊在电线杆上的样子，那双千层底布鞋在寒风里轻轻摇晃。\n"口令！"突兀的喝问刺破雨幕。朱德掀开车帘，望见岗亭上斜插的赤旗。穿短棉袄的卫兵举着马灯，光晕里浮着细碎的雨丝。"云岭来的。"他说出暗号时喉头发紧，生怕听到轻蔑的冷笑。却见卫兵突然立正，袖口露出缠着绷带的手腕："朱先生！董委员在等您。"\n市政厅的铜把手结着薄霜。推开门，壁炉火光映着整面墙的镰锤徽记。办公桌后的男人抬起头，“路上冻坏了吧？"董必武摘下眼镜，茶壶嘴腾起白雾，"尝尝新收的雨前茶。"\n朱德摩挲着粗陶杯壁，热水顺着喉管流进胃里。"我们失败了。"话出口他才惊觉声音沙哑得不像自己，"讲武堂、纠察队、夜校......全完了。"\n董必武转着茶杯，釉色青瓷在他掌心泛起幽光："知道粤汉铁路那次我们怎么赢的吗？"他突然起身推开窗户，寒风卷着汽笛声呼啸而入，"当洋人说要炸毁铁轨，把我们的同胞碾死的时候，我们用一百零三条人命把它填完了。"\n暗红桌布上铺开泛黄的图纸，朱德瞳孔收缩——竟是纵贯云岭与湖南的铁路线，铅笔标注的站点精确到每个山谷隘口。"反动派的兵工厂建在云岭，是因为那里有洋鬼子的工厂，还有盘根错节的地方豪族。"董必武的钢笔尖点在长江支流某处，"那如果我们把铁路修到岳阳港......"\n壁炉爆出火星，图纸上的红蓝标记在摇晃的光影里活过来。朱德看见戴鸭舌帽的工人往铁轨枕木下填碎石，看见满载煤炭的列车冲破洋巡捕的封锁线，最后看见枫叶岭焦黑的阵地上，自己那面被弹片撕碎的旗帜。\n"需要有人熟悉云岭的地形。"董必武的手指划过等高线，"你那些撤进深山的弟兄，应该记得每条山沟的走向。"\n朱德握杯的手猛地收紧。三天前他亲手埋了十七个弟兄，冻土下的脸庞还沾着机车厂的煤灰。此刻那些年轻的眼睛似乎都在壁炉火光里闪烁，等着他给出答案。\n"湖南可以出钢轨和技工。"董必武走过案台，"但要让铁路真正活起来，需要云岭的枕木——和你这位总工程师。"他朝朱德伸出手。\n窗外传来火车的轰鸣，震得茶杯泛起涟漪。朱德起身，重重地握住。那看似弱不禁风的文人之手，摸起来竟也同他一般粗糙。"
  hungong.171.a:0 "四海翻腾云水怒 五洲震荡风雷激。"
- hungong.172.d:0 "兜兜转转"
- hungong.172.a:0 "长沙，初冬的寒风裹挟着硝烟的余味，在城头猎猎作响。湘江水色沉郁，仿佛映照着这座刚刚经历血火的城市。\n\n邓小平和张国焘率领着残余的川陕边革命军，披着一路征战留下的征尘，步入长沙北门。他们的身后，是因给养断绝、四面围攻而被迫放弃的川陕边革命根据地，而前方，则是尚未站稳脚跟的湖南临时革命政府。\n\n城中街巷间，百姓们议论纷纷。长沙易手不过月余，旧势力余党尚未肃清，湖南革命政府的根基仍然不稳，如今，这支疲惫不堪的队伍又平添了变数。\n\n邓小平骑在马上，目光坚毅，他的身旁，张国焘神色沉思，仿佛仍在思索下一步的出路。前来迎接他们的是湖南革命政府的代表，刚刚在长沙起事的同志们面露喜色，却也掩不住一丝忧虑——川陕失败的教训太过沉重，他们带回的除了人马，更有严峻的现实：革命并非只靠一腔热血便能立足。\n\n“长沙的局势如何？”李国焘翻身下马，径直向迎接者问道。“暂时稳住了，但北方的反攻随时可能到来。”对方低声道。\n\n邓小平点点头，望向城楼上飘扬的红旗。无论前方如何，他们已别无退路。川陕的失败必须吸取教训，革命的火种不能熄灭。此刻，长沙成了他们最后的希望，也是新的起点。"
- hungong.172.b:0 "拿起武器，我们的革命还没有结束"
+ hungong.172.t:0 "兜兜转转"
+ hungong.172.d:0 "长沙，初冬的寒风裹挟着硝烟的余味，在城头猎猎作响。湘江水色沉郁，仿佛映照着这座刚刚经历血火的城市。\n\n邓小平和张国焘率领着残余的川陕边革命军，披着一路征战留下的征尘，步入长沙北门。他们的身后，是因给养断绝、四面围攻而被迫放弃的川陕边革命根据地，而前方，则是尚未站稳脚跟的湖南临时革命政府。\n\n城中街巷间，百姓们议论纷纷。长沙易手不过月余，旧势力余党尚未肃清，湖南革命政府的根基仍然不稳，如今，这支疲惫不堪的队伍又平添了变数。\n\n邓小平骑在马上，目光坚毅，他的身旁，张国焘神色沉思，仿佛仍在思索下一步的出路。前来迎接他们的是湖南革命政府的代表，刚刚在长沙起事的同志们面露喜色，却也掩不住一丝忧虑——川陕失败的教训太过沉重，他们带回的除了人马，更有严峻的现实：革命并非只靠一腔热血便能立足。\n\n“长沙的局势如何？”李国焘翻身下马，径直向迎接者问道。“暂时稳住了，但北方的反攻随时可能到来。”对方低声道。\n\n邓小平点点头，望向城楼上飘扬的红旗。无论前方如何，他们已别无退路。川陕的失败必须吸取教训，革命的火种不能熄灭。此刻，长沙成了他们最后的希望，也是新的起点。"
+ hungong.172.a:0 "拿起武器，我们的革命还没有结束"
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
@@ -5083,3 +5087,10 @@
  CHI_wang_yaowu: "王耀武"
  CHI_huang_qixiang: "黄琪翔"
  CHI_zhang_zhizhong: "张治中"
+ CHI_du_yuming: "杜聿明"
+ CHI_chen_shaokuan: "陈绍宽"
+ CHI_chen_shaoyu: "陈绍禹"
+ CHI_chen_jiliang: "陈季良"
+ CHI_li_zhilong: "李之龙"
+ CHI_deng_wenyi: "邓文仪"
+ CHI_he_zhonghan: "贺衷寒"
