--- a/localisation/KR_Fengtian_l_simp_chinese.yml
+++ b/localisation/KR_Fengtian_l_simp_chinese.yml
@@ -169,8 +169,8 @@
  FNG_Worker_Loyalty: "忠诚的工人"
  FNG_Centralized_Provincial_Revenues: "集中各省税收"
  FNG_Command_Reforms: "彻底的指挥系统改革"
- FNG_Assertive_Governance: "果决之治"
- FNG_Principled_Executive: "有德之政"
+ FNG_Assertive_Governance:0 "果决之治"
+ FNG_Principled_Executive:0 "有德之政"
  FNG_Peoples_Morality: "民德"
  FNG_Paternal_Guidance: "家长式指导"
  FNG_Japanese_Economic_Union: "日本经济联盟"
