很好，保持住

--- a/localisation/KR_Fengtian_l_simp_chinese.yml
+++ b/localisation/KR_Fengtian_l_simp_chinese.yml
@@ -504,6 +504,9 @@
  FNG_abandon_strategy_for_shanxi_tt: "§R选择这个意味着放弃与安庆一同决定的策略。这可能会让我们失去他们的支持。§!\n"
  FNG_prince_visit_unlock: "解锁§Y为亲王的参观做准备§!决议"
  FNG_invasion_discovery: "§G我方得益于特工活动或较强的破译能力，从而获取到了这一重要信息！§!"
+ FNG_fifth_zhili_fengtian_war: "第五次直奉战争"
+ FNG_manchu_fengtian_war: "清奉战争"
+ FNG_war_of_national_reclamation: "复国战争"
  FNG_preparing_war_of_national_reclamation: "为复国战争做准备"
  FNG_increase_legitimacy_tooltip: "§G我们将获得国家合法性§!\n"
  FNG_decrease_legitimacy_tooltip: "§R我们将失去国家合法性§!\n"
@@ -633,6 +636,8 @@
  FNG_Reorganize_the_NTC_desc: "奉天政府成立之初便创立了国家交通委员会，以规划全国的基础设施建设。日本人声称，国交委的目的只要是破坏满铁的行动。这一说法或许不无道理。"
  FNG_Support_Sino-Japanese_Joint_Companies: "支持中日合办企业"
  FNG_Support_Sino-Japanese_Joint_Companies_desc: "奉天的很多企业，包括臭名昭彰的满铁，都同时对中国人和日本人开放股权购买资格。不过由于多数中国人没有足够的资金来投资，多数合办企业都由日本人主导。政府的支持或许能为中国同胞们找到某种手段和动力，来逐渐改变这个平衡。"
+ FNG_Begin_the_War_of_National_Reclamation: "发起复国战争"
+ FNG_Begin_the_War_of_National_Reclamation_desc: "这一天终于来了！在长久的卧薪尝胆、韬光养晦之后，发起伟大复国战争的一天终于到来了！中华民国万岁！大帅万岁！为了中国，前进！"
  FNG_From_Beijing_to_the_Begonia_Leaf: "从北京到海棠叶"
  FNG_From_Beijing_to_the_Begonia_Leaf_desc: "几十年来，学生们和爱国者们一直将中国的形状比喻为“一片海棠叶”。现在我们已经控制了北京，是时候收复全部的国土了，让“海棠叶”的理想成为现实！"
  FNG_Unification_through_Negotiation: "谈判统一"
@@ -649,10 +654,7 @@
  FNG_Revived_Rural_Reconstruction_desc: "中国的农村腹地在很长的时间内都是透明人。现在是时候让我们制定一个振兴乡村的全面发展计划，这让农民们能参与进富裕的沿海城市的经济生活，并且有利于弥合城乡之间的裂缝。同时，如果能由国家组织公共工程计划，包括修建额外的铁路与隧道，那也能促进农村的发展。"
  FNG_Redefine_Provincial_Obligations: "重新定义省级义务"
  FNG_Redefine_Provincial_Obligations_desc: "张作霖对陈炯明许下的其中一个保证是在新政府中采取联省制度。尽管各省处在中央政府的监管下，但他们被允许独立征收赋税。尽管双方都认为自己做出了令人不快的妥协，但这就是妥协会给人带来的感觉。"
- FNG_Building_the_Road_to_Federalism: "构建联省之路"
- FNG_Building_the_Road_to_Federalism_desc: "对陈炯明的一个保证则是，中央政府批准各省基于各省宪法自行选举产生省议会，但中央政府保留指定省长的权力。而各省省长也可以直接否决省议会做出的令人不快的决定。"
- FNG_Twin_Dragons_Taming_the_Water: "二龙治水"
- FNG_Twin_Dragons_Taming_the_Water_desc: "军阀混战、列强宰割和官僚暴政的那十几年的中国与张作霖元帅和陈炯明总理建立的两党联合政府治理下的中国一比较，后者的确就像天堂一样美好。人们都说他们是“双龙治水”，合作无间。尽管有些人对这种合作能否存续下去心怀疑虑，但因为他们消除了军阀混战的苦难、为国家带来了和平，所有人都对这二人赞赏不已。"
+
  FNG_Supress_the_Bandits_Collect_the_Harvest: "剿匪征粮"
  FNG_Supress_the_Bandits_Collect_the_Harvest_desc: "奉天军队最后一次进入华北平原的时候，一些部队被鼓励去打击土匪，并协助农民收获，以换取食物补给和宿营场地。这些措施简单易行，而且平定了当地的动荡和游击活动。所有指挥官都将效仿这种方案。"
  FNG_Continue_the_Reclamation_War: "继续进行复国战争"
@@ -3282,22 +3284,6 @@
  FNG_fed_coalition: "新共和同盟"
  FNG_fed_coalition_long: "新共和同盟(The Xin Gonghe Tongmeng)\n是奉系与联省派的致公党及其盟友组成的执政联盟。同盟的纲领大致来源于联省纲领和奉系的共和主张，即在统一的政党联盟的领导下推行联省共和主义（虽然这一思想由于奉系一贯的政治冷漠态度而比最初的设想要弱化不少），提高社会福利，并最终过渡到全面的民主。"
  FNG_tongmenghui_party_long: "同盟会(United China League)\n是代表了奉天派、联省派和国民党的统一战线的单一政党。该党的纲领是党内各派系间差之甚远的观点间的妥协，他们支持联省共和主义、混合经济、社会保守主义和政治指导下的中华民族主义。联合政府在中国政坛中拥有无人可敌的政治力量，但只有时间才能证明这个大联盟能否站稳脚跟。"
- FNG_Land_to_the_Tiller: "耕者有其田"
- FNG_Land_to_the_Tiller_desc: "联省派提出的“耕者有其田”计划既能惠及农民，又不会触及地主的利益，算是最合情合理的土地改革方案之一了。虽然实施起来耗资巨大，但这一计划不仅可以使中国的农业经济实现现代化飞跃，而且还能改善农民的赤贫状况。只要能做成，人们对共和国双头体制的支持度和信任感就可确保万无一失了。"
- FNG_Federalist_Literacy_Campaign: "扫除各省文盲"
- FNG_Federalist_Literacy_Campaign_desc: "哪怕民主有诸多好处，但对那些无法理解民主的文盲来说，这就是无用之物。目前，只有五分之一的中国公民能够读写，内地贫困地区的情况更是糟糕。无知这个最大的毒害阻碍了国家的发展，让国家无法繁荣、远离民主、未来渺茫。陈炯明与张作霖于是许下了庄严的承诺，在三十年内，中国的每个城镇与村庄都会有一所符合国家标准的学校，这无疑是个宏伟的目标，但似乎并非不可能实现。"
- FNG_School_is_Cool: "奠定知识根基"
- FNG_School_is_Cool_desc: "虽然政府有意推行全民普适的教育，但中国绝大多数人口都是大字不识一个，就连陈炯明都承认要想实现教育的飞跃，就只能先在大城市建立起高等学府，然后才能将其推广到全国。因此，为奠定好人口教育的基石，培养出有素养有能力的新一代人，我们会在各省会城市设立大学。"
- FNG_Balans: "总统与各省"
- FNG_Balans_desc: "陈炯明意图仿照美国的制度，将权力分散到政府各个部门，以此来建设中华联省。为在张作霖与陈炯明两人的设想之间达成平衡，共和国决定将拥有权力的各个部门统一划归总统管辖，并且总统还拥有通过任命的省督来直接干预各省事务的独一无二的特权。希望如此做可以在张作霖要求的行政权和陈炯明坚持的省权之间构建起一座平衡的桥梁。"
- FNG_Civilian_Recruitment: "将军远兵营"
- FNG_Civilian_Recruitment_desc: "陈炯明对军队的设想的最重要部分之一是迫使一切“军国主义”的将军完全服从于中央联军的领导，以此避免滥用职权的情况出现，这显然与现状不符，为此我们已经起草了一套解决方案，保留将军们的政府职位，但禁止他们自己直接招募军队，作为代替，让他们必须与本省以外的省份就招兵问题展开协商，这既限制了军队从各省集中兵力的能力，又优雅地保持了必要的现状。"
- FNG_Patriots: "写入书本的爱国主义"
- FNG_Patriots_desc: "虽然陈炯明坚持在多数情况下省级民主自治神圣不可侵犯，但张作霖则认为应利用在全国扫盲运动中建立起来的学校网络推行爱国教育，重拾因过度的权力下放而遭人遗忘的中华民族身份认同，将华夏历史、文化的宝贵价值以及军队对共和大业的贡献教授予下一代。陈炯明显然不满于此种逾矩行为，不过还是在我们对其他事务做出退让的承诺的诱惑下点头同意了。"
- FNG_Fed_Healthcare: "自下而上的医保"
- FNG_Fed_Healthcare_desc: "陈炯明的另一个宏伟目标是为中国建立一个全国性的医疗保健系统，若要实现这一目标，无疑是道阻且艰。事实上，建立这么一个系统实在是太过困难，以至于陈炯明不得不自相矛盾地再次做出妥协，将医保责任从中央转移到各省上去。考虑到建立全国性的医保系统必然会耗费巨大，人们一致认为，除在各大人口中心外，国家医保必须由各省自筹款项。"
- FNG_seminsheng: "无革命之民生"
- FNG_seminsheng_desc: "统一大会取得了圆满成功，组成重建的同盟会的各党派之间也实现了和解，各自许下了尊重三民主义的诺言，但作为交换，在民生方面，原本更为革命的要素将被摒弃。"
  FNG_Waking_Dragon: "觉醒之龙"
  FNG_Waking_Dragon_desc: "长期分裂的中国终于再度统一。这个坐拥数亿人口的国家，现在准备在这个冷漠待它、在它软弱无力之时落井下石的世界上争得一席之地。当中华巨龙再醒时，世界颤栗，既然成千上万的爱国志士已蓄势待发，谁又能抵挡得住我们呢？"
  FNG_THESUN: "征服迷途旭日"
